@@ -467,3 +467,21 @@ int db_ncols(QueryHandle *query)
     else
 	    return 0;
 }
+
+/* concat strings specific to mysql */
+char * db_concat(int cnt, ...)
+{
+    const char prefix[] = "CONCAT(";
+    const char suffix[] = ")";
+    va_list vs;
+    va_start(vs, cnt);
+    char * body = va_list_join(cnt, ", ", vs);
+    va_end(vs);
+
+    char * result = malloc(strlen(body) + strlen(prefix) + strlen(suffix));
+    sprintf(result, "%s%s%s", body, prefix, suffix);
+
+    free(body);
+    return result;
+}
+
