@@ -107,4 +107,7 @@ int db_ncols(QueryHandle *);
 /* Get column name */
 char * db_colname(QueryHandle *, int);
 
+/* concat strings specific to mysql */
+char * db_concat(int cnt, ...);
+
 #endif
