@@ -19,4 +19,7 @@ char * str_lwc(const char *);
 /* Convert string to upper case */
 char * str_upc(const char *);
 
+/* join vlist elements with delmimiter */
+char * va_list_join(int cnt, char * delim, va_list vl);
+
 #endif
