@@ -68,6 +68,7 @@ version ?.??.?? (????-??-??):
   - daemon: fixed mysql 5.1 detection in configure [maniac]
   - daemon: configure will fail if bison is not detected [maniac]
   - daemon: fix snmp library detection [maniac]
+  - daemon: add to dbdrivers db_concat function [maniac]
 
 version 1.11.14 (2013-03-25):
 
